--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-oxlint": "~1.1.0",
     "eslint-plugin-vue": "~10.2.0",
     "jiti": "^2.4.2",
+    "less": "^4.3.0",
+    "less-loader": "^12.3.0",
     "naive-ui": "^2.42.0",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.1.0",
